--- a/GhostTheme/assets/css/post.css
+++ b/GhostTheme/assets/css/post.css
@@ -28,6 +28,10 @@ header#post {
     width: 75%;
 }
 
+.post-content a {
+    color: #2a6fec !important;
+}
+
 .postContainer {
     padding: 0 !important;
 }
