--- a/GhostTheme/assets/css/post.css
+++ b/GhostTheme/assets/css/post.css
@@ -28,6 +28,11 @@ header#post {
     width: 75%;
 }
 
+.post-content p {
+    line-height: normal;
+    font-size: 1.5em;
+}
+
 .post-content a {
     color: #2a6fec !important;
 }
