--- a/GhostTheme/assets/css/post.css
+++ b/GhostTheme/assets/css/post.css
@@ -33,6 +33,10 @@ header#post {
     font-size: 1.5em;
 }
 
+.post-content h2 {
+    font-size: 2em;
+}
+
 .post-content a {
     color: #2a6fec !important;
 }
