--- a/GhostTheme/assets/css/post.css
+++ b/GhostTheme/assets/css/post.css
@@ -32,6 +32,7 @@ header#post {
 .post-content p {
     line-height: normal;
     font-size: 1.1em;
+    margin-bottom: 10px;
 }
 
 .post-content h2 {
@@ -201,6 +202,7 @@ pre {
     color: white;
     box-shadow: inset 0 0 4px black;
     overflow-x: scroll;
+    margin: 20px;
 }
 
 /* width */
