--- a/GhostTheme/assets/css/style.css
+++ b/GhostTheme/assets/css/style.css
@@ -13,11 +13,13 @@ header#home {
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 header#home h3 {
     display: flex;
-    align-items: center;
+    align-items: center;#
     justify-content: center;
     font-size: 1.75em;
     background-color: rgb(20, 20, 20);
