--- a/portfolio/assets/cta.css
+++ b/portfolio/assets/cta.css
@@ -14,6 +14,9 @@ form#cta input[type="submit"] {
     background-color: #5151ff;
     color: white;
     cursor: pointer;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
 }
 
 form#cta input[type="submit"]:disabled {
