--- a/GhostTheme/assets/css/post.css
+++ b/GhostTheme/assets/css/post.css
@@ -278,7 +278,9 @@ pre {
     color: white;
     box-shadow: inset 0 0 4px black;
     overflow-x: scroll;
-    margin: 20px;
+    margin-top: 15px;
+    margin-bottom: 15px;
+    width: 100%;
 }
 
 /* width */
