--- a/GhostTheme/default.hbs
+++ b/GhostTheme/default.hbs
@@ -11,8 +11,8 @@
     <script src="{{assets}}/assets/js/nav.js"></script>
 
     {{#is "post"}}
-        <meta name="og:image" content="https://cdn.kentonvizdos.com/social-cards?title={{post.title}}&slug={{post.slug}}&author={{post.primary_author.name}}&time={{post.reading_time}}">
-        <meta name="twitter:image" content="https://cdn.kentonvizdos.com/social-cards?title={{post.title}}&slug={{post.slug}}&author={{post.primary_author.name}}&time={{post.reading_time}}">
+        <meta name="og:image" content="https://cdn.home.kentonvizdos.com/social-cards?title={{post.title}}&slug={{post.slug}}&author={{post.primary_author.name}}&time={{post.reading_time}}">
+        <meta name="twitter:image" content="https://cdn.home.kentonvizdos.com/social-cards?title={{post.title}}&slug={{post.slug}}&author={{post.primary_author.name}}&time={{post.reading_time}}">
     {{/is}}
 
     <link rel="stylesheet" href="{{assets}}/assets/css/global.css">
