--- a/GhostTheme/default.hbs
+++ b/GhostTheme/default.hbs
@@ -21,10 +21,10 @@
     {{ghost_head}}
     
     {{#is "post"}}
-        <meta name="og:image" content="https://cdn.home.kentonvizdos.com/social-cards?title={{post.title}}&slug={{post.slug}}&author={{post.primary_author.name}}&time={{post.reading_time minute="only a minute" minutes="% minutes"}}">
+        <meta name="og:image" content="https://cdn.home.kentonvizdos.com/social-cards?title={{post.title}}&slug={{post.slug}}&author={{post.primary_author.name}}&time={{post.reading_time}}">
 
         <meta name="twitter:card" content="summary_large_image">
-        <meta name="twitter:image" content="https://cdn.home.kentonvizdos.com/social-cards?title={{post.title}}&slug={{post.slug}}&author={{post.primary_author.name}}&time={{post.reading_time minute="only a minute" minutes="% minutes"}}">
+        <meta name="twitter:image" content="https://cdn.home.kentonvizdos.com/social-cards?title={{post.title}}&slug={{post.slug}}&author={{post.primary_author.name}}&time={{post.reading_time}}">
     {{/is}}
 </head>
 
