--- a/GhostTheme/partials/navbar.hbs
+++ b/GhostTheme/partials/navbar.hbs
@@ -1,17 +1,4 @@
 <nav class="main{{type}}">
-    {{!-- <script>
-        function toggleDarkmode() {
-            const html = document.querySelector('html');
-            const togBtn = document.querySelector('#nightmodeToggle i')
-
-            const enableDarkmode = html.dataset.theme == undefined || html.dataset.theme == "light";
-
-            togBtn.classList.remove(enableDarkmode ? "far" : "fas");
-            togBtn.classList.add(enableDarkmode ? "fas" : "far");
-
-            html.dataset.theme = enableDarkmode ? "dark" : "light";
-        }
-    </script> --}}
     <ul id="desktop">
         <article class="left">
             <li id="blogName"><a href="/">Kenton Vizdos <strong>Blog</strong></a></li>
@@ -37,6 +24,7 @@
             <li id="blogName"><a href="/">Kenton Vizdos <strong>Blog</strong></a></li>
         </article>
         <article class="right">
+            <li id="nightmodeToggle" onclick="toggleDarkmode();"><i class="far fa-moon"></i></li>
             <li><i class="fas fa-bars" onclick="openNav()"></i></li>
             
             <ul class="navigator css-transitions-only-after-page-load">
